--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Work 'n Coffee: WiFi rating</h1>
+    <h1>Work 'n Coffee</h1>
+    <h3>WiFi rating</h3>
     <h5>*v1 solo para CABA</h5>
-    <form>
+    <form id="form">
         <label for="coffee-name">Cafeteria:</label>
         <input type="text" id="coffee-name" name="coffee-name" required>
         <br><br>
