--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Work 'n Coffee</h1>
     <h3>WiFi rating</h3>
-    <h5>*v1 solo para CABA</h5>
+    <h5 style="color: red;">*v1 solo para CABA</h5>
     <form id="form">
         <label for="coffee-name">Cafeteria:</label>
         <input type="text" id="coffee-name" name="coffee-name" required>
