--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Work 'n Coffee</h1>
-    <h3>WiFi rating</h3>
+    <!-- <h3>Elegí una </h3> -->
     <h5 style="color: red;">*v1 solo para CABA</h5>
     <form id="form">
         <label for="coffee-name">Cafeteria:</label>
@@ -99,7 +99,7 @@
 
 
     <div>
-      <label>Barrio:&nbsp&nbsp</label>
+      <label id="filtro">Barrio:&nbsp&nbsp</label>
       <select id="filtro_barrio" name="filtro_barrio">
           <option value="" disabled selected>-</option>
           <option value="Agronomía">Agronomía</option>
