--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
   </head>
   <body>
-    <h1>Work 'n Coffee</h1>
-    <h4>Encontrá el café con el mejor WiFi</h4>
+    
+    <h1 style="margin-top: 10px;"><img src="logo.png" style="margin-left: 10px; height: 35px; width: 35px;">&nbspWork 'n Coffee</h1>
+    <h3>Encontrá el café con el mejor WiFi</h3>
     <h5 style="color: red;">*v1 solo para CABA</h5>
     <form id="form">
         <label for="coffee-name" style="display: none;">Cafeteria:<span style="font-size: 11px; font-style: italic; display: none;">(*obligatorio)</span></label>
