--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     
-    <h1 style="margin-top: 10px;"><img src="logo.png" style="margin-left: 10px; height: 35px; width: 35px;">&nbspWork 'n Coffee</h1>
+    <h1><img id="img" src="logo.png">&nbspWork 'n Coffee</h1>
     <h3>Encontrá el café con el mejor WiFi</h3>
     <h5 style="color: red;">*v1 solo para CABA</h5>
     <form id="form">
