--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html id="html">
   <head>
     <title>Work 'n Coffee</title>
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link id="favicon" rel="icon" type="image/x-icon" href="logo2.png" >
     <link rel="stylesheet" href="style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
@@ -20,7 +20,7 @@
         <input type="text" id="street" name="street" style="display: none;">
         <br>
         
-        <label for="street">Cafeteria:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)</span></label><input id="pac-input" type="text" placeholder="Ingresar nombre y dirección" />
+        <label for="street">Cafeteria:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)&nbsp&nbsp</span></label><input id="pac-input" type="text" placeholder="Ingresar nombre y dirección" />
         
         <body>
           <div id="mapa">
@@ -39,7 +39,7 @@
         </body>
 
         <br>
-        <label for="barrio">Barrio:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)</span></label>
+        <label for="barrio">Barrio:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)&nbsp&nbsp</span></label>
         <select id="barrio" name="barrio">
             <option value="" disabled selected>-</option>
             <option value="Agronomía">Agronomía</option>
@@ -95,7 +95,7 @@
         <br>
 
         <br>
-        <label for="wifi-rating">Rating WiFi:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)</span></label>
+        <label for="wifi-rating">Rating WiFi:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)&nbsp&nbsp</span></label>
         <select id="wifi-rating" name="wifi-rating" required>
             <option value="" disabled selected>-</option>
             <option value="1">1 - Muy Malo</option>
