--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <input type="text" id="street" name="street" style="display: none;">
         <br>
         
-        <label for="street">Cafeteria:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)&nbsp&nbsp</span></label><input id="pac-input" type="text" placeholder="Ingresar nombre y dirección" />
+        <label for="street" id="cafeteria">Cafeteria:&nbsp<span style="font-size: 11px; font-style: italic;">(*obligatorio)&nbsp&nbsp</span></label><input id="pac-input" type="text" placeholder="Ingresar nombre y dirección" />
         
         <body>
           <div id="mapa">
