--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div id="mapa">
             <div class="pac-card" id="pac-card">
             </div>
-            <div id="map" style="height: 200px;"></div>
+            <div id="map" style="height: 400px;"></div>
             <div id="infowindow-content">
               <span id="place-name" class="title"></span><br />
               <span id="place-address"></span>
@@ -129,7 +129,7 @@
     <br><br>
 
     <!-- filtros de la tabla -->
-    <div id="resultado">
+    <div id="resultado" style="margin-top: 200px;">
       <label id="filtro" >Barrio:&nbsp&nbsp</label>
       <select id="filtro_barrio" name="filtro_barrio">
           <option value="" disabled selected>-</option>
