--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <link id="favicon" rel="icon" type="image/x-icon" href="logo2.png" >
     <link rel="stylesheet" href="style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C5YPRML5XE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-C5YPRML5XE');
+    </script>
   </head>
   <body>
     
