--- a/index.html
+++ b/index.html
@@ -294,15 +294,22 @@
           })
           .then(() => {
             alert("Datos agregados correctamente.");
-            const TelegramBot = require('node-telegram-bot-api');
-            // Replace YOUR_TOKEN with your bot's token obtained from BotFather
-            const token = '6086969047:AAG9RlsqrusNHjqBMmR2Cp4W1WikjksEfQU';
-            // Create a bot instance
-            const bot = new TelegramBot(token, { polling: false });
-            // Replace CHAT_ID with the chat ID of the user/group/channel you want to send a message to
-            const chatId = '-1001821689872';
-            // Send a message to the specified chat ID
-            bot.sendMessage(chatId, 'New data was added.');
+      
+            const token = '6086969047:AAG9RlsqrusNHjqBMmR2Cp4W1WikjksEfQU'; // Replace with your Telegram bot token
+            const chatId = '-1001821689872'; // Replace with the chat ID of the user or group you want to send the message to
+            const message = 'New data was added.'; // Replace with the message you want to send
+
+            fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${message}`)
+              // .then(response => {
+              //   if (response.ok) {
+              //     console.log('Message sent successfully!');
+              //   } else {
+              //     console.error('Failed to send message.');
+              //   }
+              // })
+              // .catch(error => {
+              //   console.error('Error sending message:', error);
+              // });
 
           })
           .catch((error) => {
