--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     
     <h1><img id="img" src="logo.png">&nbspWork 'n Coffee</h1>
-    <h3>Encontrá el sitio con el mejor WiFi</h3>
+    <h3>Encontrá el espacio con el mejor WiFi</h3>
     <h4 style="color: red;">*v1 solo para CABA</h4>
     <form id="form">
         <label for="coffee-name" style="display: none;">Sitio:</label>
