--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <input type="text" id="street" name="street" style="display: none;">
         <br>
         
-        <label for="street" id="label">Sitio:&nbsp</label><input id="pac-input" type="text" placeholder="Ingresar nombre y dirección" />
+        <label for="street" id="label"></label><input id="pac-input" type="text" placeholder="Ingresar nombre y dirección" />
         
         <body>
           <div id="mapa">
