--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1><img id="img" src="logo.png">&nbspWork 'n Coffee</h1>
     <h3>Encontrá el espacio con el mejor WiFi para trabajar</h3>
     <br> 
-  <h4 style="width: 35%; font-size: 15px;">¿Cansado de buscar el lugar perfecto para trabajar mientras disfrutas de una deliciosa taza de café?
+  <h4>¿Cansado de buscar el lugar perfecto para trabajar mientras disfrutas de una deliciosa taza de café?
       Work'n Coffee está acá para simplificar tu elección. 
       <br><br>
       Ya sea que necesites un lugar tranquilo para concentrarte o un ambiente inspirador para estimular tu creatividad, estamos aquí para ayudarte a encontrarlo.
