--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <br><br>
 
     <div>
-      <button type="button" id="nuevo" style="margin-left: 15%;">Añadir nueva cafeteria</button>
+      <button type="button" id="nuevo" style="margin-left: 15%; margin-top: 5%;">Añadir nueva cafeteria</button>
       <!-- <span>&nbsp&nbsp&nbsp</span> -->
       <button type="button" id="listado" style="margin-left: 5%;">Ver cafeterias existentes</button>
     </div>
