--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </select>
           <br><br>
 
-          <button type="button" id="insert" style="margin-left: 50%; margin-bottom: 20%;">Submit</button>
+          <button type="button" id="insert" style="margin-left: 40%; margin-bottom: 20%; margin-top: 5%;">Submit</button>
       </form>
 
       <div id="myModal" class="modal">
