--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       
       <!-- filtros de la tabla -->
       <div id="resultado" style="margin-top: 50px;">
-        <h3 id="label_filtro" style="margin-left: 10%;">--------- Filtrá por ubicacion ---------</h3>
+        <!-- <h3 id="label_filtro" style="margin-left: 10%;">--------- Filtrá por ubicacion ---------</h3> -->
 
         <label for="filtro_provinces">Provincia:&nbsp</label>
           <select id="filtro_provinces" name="filtro_provinces" onchange="filtros()">
