--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <br><br>
 
-    <div>
+    <div id="botones">
       <button type="button" id="nuevo" style="margin-left: 15%; margin-top: 5%;">Añadir nueva cafeteria</button>
       <!-- <span>&nbsp&nbsp&nbsp</span> -->
       <button type="button" id="listado" style="margin-left: 5%;">Ver cafeterias existentes</button>
