--- a/index.html
+++ b/index.html
@@ -223,15 +223,8 @@
   
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-    const firebaseConfig = {
-      apiKey: "AIzaSyBqHdRmzEy8iiWyULlQoBTZZntlvu51IK0",
-      authDomain: "wirelesscafe-f09a3.firebaseapp.com",
-      projectId: "wirelesscafe-f09a3",
-      storageBucket: "wirelesscafe-f09a3.appspot.com",
-      messagingSenderId: "1002846013610",
-      appId: "1:1002846013610:web:768fb84283af5b7e3468d3",
-      measurementId: "G-C5YPRML5XE"
-    };
+    const firebaseConfig = config.firebaseConfig;
+
   
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
@@ -327,9 +320,8 @@
           })
           .then(() => {
             alert("Datos agregados correctamente.");
-            const token = '6086969047:AAG9RlsqrusNHjqBMmR2Cp4W1WikjksEfQU'; // Replace with your Telegram bot token
-            const chatId = '-1001821689872'; // Replace with the chat ID of the user or group you want to send the message to
-            // console.log(newRuido)
+            const token = config.telegramToken; // Replace with your Telegram bot token
+            const chatId = config.chatId; // Replace with the chat ID of the user or group you want to send the message to
             const message = '[Firebase] - ' + (nombre.textContent) + ' - ' + (wifi.value) + ' - ' + (ruido.value) + ' - ' + (calle.textContent) + ' - ' + (barrio.value) + ' - ' + (provincia.value); // Replace with the message you want to send
 
             fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${message}`)
@@ -365,8 +357,8 @@
           .catch((error) => {
             alert(error);
           });
-          const token = '6086969047:AAG9RlsqrusNHjqBMmR2Cp4W1WikjksEfQU'; // Replace with your Telegram bot token
-          const chatId = '-1001821689872'; // Replace with the chat ID of the user or group you want to send the message to
+          const token = config.telegramToken; // Replace with your Telegram bot token
+          const chatId = config.chatId; // Replace with the chat ID of the user or group you want to send the message to
           const message = '[Firebase] - ' + (nombre.textContent) + ' - ' + (wifi.value) + ' - ' + (ruido.value) + ' - ' + (calle.textContent) + ' - ' + (barrio.value) + ' - ' + (provincia.value); // Replace with the message you want to send
 
           fetch(`https://api.telegram.org/bot${token}/sendMessage?chat_id=${chatId}&text=${message}`)
