--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     // Import the functions you need from the SDKs you need
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js";
     import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-analytics.js";
-    const config = require('./config.js'); // Import the config object using CommonJS
+    import config from './config.js'; // Import the config object from a separate file
 
     // TODO: Add SDKs for Firebase products that you want to use
     // https://firebase.google.com/docs/web/setup#available-libraries
