--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
 
         <td style="min-width: 70px; vertical-align: middle; display: none;">
           <span
-            onclick="toggleMap(this);"
             src="map.png"
+            onclick="toggleMap(this);"
             onmouseover="this.classList.add('hand-pointer')"
             onmouseout="this.classList.remove('hand-pointer')"
           >
@@ -485,6 +485,8 @@
           <span
               src="time.png"
               onclick="toggleHours(this);"
+              onmouseover="this.classList.add('hand-pointer')"
+              onmouseout="this.classList.remove('hand-pointer')"
           >
               <img id="icon_hours" src="time.png">
           </span>
@@ -492,6 +494,8 @@
           <span
               src="phone.png"
               onclick="togglePhone(this);"
+              onmouseover="this.classList.add('hand-pointer')"
+              onmouseout="this.classList.remove('hand-pointer')"
           >
               <img id="icon_phone" src="phone.png">
           </span>
